src/objects/Apttus_Config2__CustomerPOItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__ContractItemName__c</fullName>
        <description>The name of the bundle or standalone product or service to be ordered</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of the bundle or standalone product or service to be ordered</inlineHelpText>
        <label>Contract Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractItemNumber__c</fullName>
        <description>The Unique identifier for the item number as referred to in the quote or contract</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The Unique identifier for the item number as referred to in the quote or contract</inlineHelpText>
        <label>Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContractNumber__c</fullName>
        <description>The Reference number of the contract associated with the purchase order</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The Reference number of the contract associated with the purchase order</inlineHelpText>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EndDate__c</fullName>
        <description>The Expected end date of the subscription or service</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Expected end date of the subscription or service</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Location__c</fullName>
        <description>The Location at which the products/services need to be installed at</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Location at which the products/services need to be installed at</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OriginalPOLineNumber__c</fullName>
        <description>The line number of the associated original purchase order item</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The PO line number that remains constant over the life cycle of the purchase order item across versions. During initial creation, Original PO line number is the same as PO line Number.</inlineHelpText>
        <label>Original PO Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentContractItemNumber__c</fullName>
        <description>Represents the parent item number associated with the item when it is part of a solution bundle</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents the parent item number associated with the item when it is part of a solution bundle</inlineHelpText>
        <label>Parent Contract Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuoteNumber__c</fullName>
        <description>The Reference number of the quote associated with the purchase order</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Reference number of the quote associated with the purchase order</inlineHelpText>
        <label>Quote Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReferencePOLineNumber__c</fullName>
        <description>The Reference PO item number from the external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The Reference PO item number from the external system</inlineHelpText>
        <label>Reference PO Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RequestedDeliveryDate__c</fullName>
        <description>The date requested to deliver products and services referred to in the purchase order item</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date requested to deliver products and services referred to in the purchase order item</inlineHelpText>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountRefId__c</fullName>
        <description>The External account reference that will be used as ship-to-account for orders generated from the purchase order</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The External account reference that will be used as ship-to-account for orders generated from the purchase order</inlineHelpText>
        <label>Ship To Account Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShiptoName__c</fullName>
        <description>The Ship To Account name as received from external system</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Ship To Account name as received from external system</inlineHelpText>
        <label>Ship to Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The Expected start date of the subscription or service</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Expected start date of the subscription or service</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QTO_POI_Quantity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QTO POI Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>